# Website

./: .env.example  .gitignore  .replit  ACCESSIBILITY_AUDIT.md  ADMIN_SCORING_FORMAT_FIX.md  AGENT.md  AGENTS.md  AI_OPTIMIZATION_SUMMARY.md  AI_SEO_GUIDE.md  API.md  ARCHITECTURE.md  AzuriteConfig  CHANGELOG.md  CLAUDE.md  CLAUDE_THEME_UPDATE.md  COLOR_MODERNIZATION_SUMMARY.md  COMPONENTS.md  COMPONENT_MAP.md  CONTENT_STRUCTURE_MAP.md  DARK_MODE_QUICK_REFERENCE.md  DARK_MODE_USAGE_GUIDE.md  DATA_ARCHITECTURE_MAP.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DESIGN_CHECKLIST.md  DESIGN_UX_AUDIT_PLAN.md  DEVELOPMENT.md  ENVIRONMENT_SETUP.md  FANTASY_DATA_PERSISTENCE.md  FANTASY_FIX_SUMMARY.md  FANTASY_FOOTBALL_SETUP.md  FANTASY_RANKINGS_ANALYSIS.md  FANTASY_RB_TIERS.md  FANTASY_SETUP.md  GETTING-STARTED.md  HOMEPAGE_IMPROVEMENTS.md  IMPLEMENTATION_PROGRESS.md  IMPROVEMENTS_SUMMARY.md  INVESTMENT_TRACKER.md  NFLVERSE_FIX_DOCUMENTATION.md  (+65 more)
tools/score-pool/: .gitignore  README.md  config.example.toml  fixtures.example.csv  fixtures.example.json  pyproject.toml  requirements.txt
tools/score-pool/scorepool/: __init__.py  __main__.py  cli.py  config.py  engine.py  models.py  scaffold.py  state.py
tools/score-pool/scorepool/leaderboard/: __init__.py  field.py  strategy.py
tools/score-pool/scorepool/odds/: __init__.py  base.py  manual.py  the_odds_api.py
tools/score-pool/scorepool/optimizer/: __init__.py  expected_points.py
tools/score-pool/tests/: test_devig.py  test_integration.py  test_leaderboard.py  test_optimizer.py  test_scoreline.py  test_scoring.py  test_state.py
(+4959 files in other folders)
