[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scorepool"
version = "0.1.0"
description = "Exact-score prediction pool assistant: de-vig odds, model scorelines, optimise expected points, and tilt for the leaderboard."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
# Live odds fetching; the tool works without it via manual/CSV/JSON odds.
api = ["requests>=2.28"]
dev = ["pytest>=7.4"]

[project.scripts]
scorepool = "scorepool.cli:main"

[tool.setuptools.packages.find]
include = ["scorepool*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
